--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /* Google Font Import */
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Muli:wght@400;700&display=swap");
 
 /* Start: Global Styles */
 
@@ -8,14 +8,22 @@
 }
 
 body {
-  font-family: "Roboto", sans-serif;
+  background-color: #3b3b98;
+  color: #fff;
+  font-family: "Muli", sans-serif;
   height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   overflow: hidden;
+  padding: 10px;
   margin: 0;
+}
+
+h2 {
+  margin: 10px 0 20px 0;
+  text-align: center;
 }
 
 /* End: Global Styles */
