--- a/style.css
+++ b/style.css
@@ -27,3 +27,11 @@ h2 {
 }
 
 /* End: Global Styles */
+
+.container {
+  background-color: #23235b;
+  box-shadow: 0px 2px 10px rgba(255, 255, 255, 0.2);
+  padding: 20px;
+  width: 350px;
+  max-width: 100%;
+}
