--- a/style.css
+++ b/style.css
@@ -26,6 +26,21 @@ h2 {
   text-align: center;
 }
 
+.btn {
+  border: none;
+  background-color: #3b3b98;
+  color: #fff;
+  font-family: inherit;
+  font-size: 16px;
+  padding: 8px 12px;
+  cursor: pointer;
+}
+
+.btn-large {
+  display: block;
+  width: 100%;
+}
+
 /* End: Global Styles */
 
 .container {
@@ -34,4 +49,31 @@ h2 {
   padding: 20px;
   width: 350px;
   max-width: 100%;
+}
+
+.result-container {
+  background-color: rgba(0, 0, 0, 0.4);
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  position: relative;
+  font-size: 18px;
+  letter-spacing: 1px;
+  padding: 12px 10px;
+  height: 50px;
+  width: 100%;
+}
+
+.result-container #result {
+  word-wrap: break-word;
+  max-width: calc(100% - 40px);
+}
+
+.result-container .btn {
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  width: 40px;
+  height: 40px;
+  font-size: 20px;
 }
