--- a/style.css
+++ b/style.css
@@ -77,3 +77,10 @@ h2 {
   height: 40px;
   font-size: 20px;
 }
+
+.setting {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 15px 0;
+}
